Added dialog modal

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="add-book">
         <button class="add-btn">+ Add Book</button>
     </div>
+    <dialog class="modal"></dialog>
     <div class="books">
         <table class="book-list">
             <tr>
